@@ -103,6 +103,14 @@ L<https://en.wikipedia.org/wiki/HTTP_header_injection>
 
 Robert Rothenberg, C<< <rrwo at cpan.org> >>
 
+=head1 ACKNOWLEDGEMENTS
+
+=over
+
+=item Foxtons, Ltd.
+
+=back
+
 =head1 LICENSE AND COPYRIGHT
 
 Copyright 2014 Robert Rothenberg.
